fix: reduce flicker when change theme on timeline page

--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -31,4 +31,9 @@ address {
 
 pre.mermaid {
     white-space: normal;
+    display: none;
+}
+
+pre.mermaid[data-processed="true"] {
+    display: unset;
 }
